@@ -849,12 +849,12 @@ class prepare_mmcif_files_for_deposition(QtCore.QThread):
         refSoft = self.pdb.get_refinement_program()
 
         if os.path.isdir('/dls'):
-            if os.path.isfile(self.db_dict['RefinementMMCIFmodel_latest']):
-                pdb_extract_init = 'source /dls/science/groups/i04-1/software/pdb-extract-v3.26/pdb-extract-v3.26-prod-src/setup.sh\n'
-                pdb_extract_init += '/dls/science/groups/i04-1/software/pdb-extract-v3.26/pdb-extract-v3.26-prod-src/bin/pdb_extract'
-            else:
-                pdb_extract_init = 'source /dls/science/groups/i04-1/software/pdb-extract-prod/setup.sh\n'
-                pdb_extract_init += '/dls/science/groups/i04-1/software/pdb-extract-prod/bin/pdb_extract'
+#            if os.path.isfile(self.db_dict['RefinementMMCIFmodel_latest']):
+#                pdb_extract_init = 'source /dls/science/groups/i04-1/software/pdb-extract-v3.26/pdb-extract-v3.26-prod-src/setup.sh\n'
+#                pdb_extract_init += '/dls/science/groups/i04-1/software/pdb-extract-v3.26/pdb-extract-v3.26-prod-src/bin/pdb_extract'
+#            else:
+            pdb_extract_init = 'source /dls/science/groups/i04-1/software/pdb-extract-prod/setup.sh\n'
+            pdb_extract_init += '/dls/science/groups/i04-1/software/pdb-extract-prod/bin/pdb_extract'
         else:
             pdb_extract_init = 'source ' + os.path.join(os.getenv('XChemExplorer_DIR'),
                                                         'pdb_extract/pdb-extract-prod/setup.sh') + '\n'
@@ -874,18 +874,18 @@ class prepare_mmcif_files_for_deposition(QtCore.QThread):
                    ' -iENT data_template.cif'
                    ' -o {0!s}.mmcif > {1!s}.mmcif.log'.format(xtal, xtal))
         else:
-            if os.path.isfile(self.db_dict['RefinementMMCIFmodel_latest']):
-                self.Logfile.insert('%s: found MMCIF file; will use instead of PDB: %s' %(xtal,self.db_dict['RefinementMMCIFmodel_latest']))
-                Cmd = (pdb_extract_init +
-                       ' -r {0!s}'.format(refSoft) +
-                       ' -iCIF {0!s}'.format(self.db_dict['RefinementMMCIFmodel_latest']) +
-                       ' -e MR'
-                       ' -s AIMLESS'
-                       ' -iLOG {0!s}.log'.format(xtal) +
-                       ' -iENT data_template.cif'
-                       ' -o {0!s}.mmcif > {1!s}.mmcif.log'.format(xtal, xtal))
-            else:
-                Cmd = (pdb_extract_init +
+#            if os.path.isfile(self.db_dict['RefinementMMCIFmodel_latest']):
+#                self.Logfile.insert('%s: found MMCIF file; will use instead of PDB: %s' %(xtal,self.db_dict['RefinementMMCIFmodel_latest']))
+#                Cmd = (pdb_extract_init +
+#                       ' -r {0!s}'.format(refSoft) +
+#                       ' -iCIF {0!s}'.format(self.db_dict['RefinementMMCIFmodel_latest']) +
+#                       ' -e MR'
+#                       ' -s AIMLESS'
+#                       ' -iLOG {0!s}.log'.format(xtal) +
+#                       ' -iENT data_template.cif'
+#                       ' -o {0!s}.mmcif > {1!s}.mmcif.log'.format(xtal, xtal))
+ #           else:
+            Cmd = (pdb_extract_init +
                        ' -r {0!s}'.format(refSoft) +
                        ' -iPDB {0!s}'.format('refine.split.bound-state.pdb') +
                        ' -e MR'
